Findbugs fixes: use e.g. Integer.valueOf instead of new Integer and similar.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/collections/trunk@1435980 13f79535-47bb-0310-9956-ffa450edef68